Changelog
=========

1.5.3 (unreleased)
------------------

- Nothing changed yet.


1.5.2 (2009-09-21)
------------------

- We now ignore answers where no answer was given
  These questions were actually never asked (gerken)
- Now with the real meanings of categories (sec3, size_5) (gerken)
- Complete country mapping no answers. Norway and Switzerland added (gerken)
- Added support for % questions (gerken)

1.4.0 (2009-09-15)
------------------

- Added missing translation (gerken)
- Added fallback if no map default answer has no translation (gerken)
- Fixed multiple query string issues (gerken)
- Fixed a wrong calculation if noone from a given country answered (gerken)
- Updated all DB Scripts for usage with postgres. No compatibility with sqlite retained. Therefor a bigger release (gerken)

1.3.2 (2009-09-14)
------------------

- Make it work with postgres (gerken)

1.3.1 (2009-09-10)
------------------

- Slightly improved error handling (gerken)

1.3 (2009-09-10)
----------------

- Some improvements in translations (gerken)
- More stable adapters (gerken)

1.2 (2009-09-08)
----------------

- Much more working. Translations in part (gerken)

1.1 (2009-06-10)
----------------

- I screwed up the first release, here goes another one (thomasw)

1.0 (2009-06-10)
----------------

- First release (thomasw)

0.1 (2008-03-31)
----------------

- Initial creation
